When cloning a virtual server with a private IP, a new address for the clone can be entered instead of relying on automatic IP allocation.
Extra administrators can now be granted permissions to edit DNS records and options.
When calling the remote API with the json, perl or xml format flags, multiline mode is automatically enabled so that the output from commands can be correctly parsed. API errors are also returned using the selected format.
---- Changes since 3.91 ----
Updated the Mantis script installer to version 1.2.10, ZenPhoto to 1.4.2.3, phpMyAdmin to 3.5.0, Gallery to 2.3.2, phpMyFAQ to 2.7.5, SugarCRM to 6.4.3, WordPress to 3.3.2, DokuWiki to 2012-01-25a, vTigerCRM to 5.4.0, Typo3 to 4.6.8, MediaWiki to 1.18.3, Magento to 1.7.0.0, and Joomla to 2.5.4.
Virtualmin backups can now be signed and encrypted, using GPG keys created within Virtualmin or imported from an existing file. This protects backups from snooping or modification when stored on an untrusted remote system.
Added a button to the Edit User page to re-send the signup email.
---- Changes since 3.92 ----
Updated the phpMyAdmin script installer to version 3.5.1, Drupal to 7.14 and 6.26, SugarCRM to 6.4.4, FengOffice to 2.0.0, Zikula to 1.2.9, OpenX to 2.8.9, ZenPhoto to 1.4.2.4, phpMyFAQ to 2.7.6, Movable Type to 5.14, Typo3 to 4.6.9, Flyspray to 0.9.9.7, PiWik to 1.8.2, WordPress to 3.4, Mantis to 1.2.11, Coppermime to 1.5.20, Joomla to 2.5.6, and MediaWiki to 1.19.1.
Added new API commands list list-s3-buckets and upload-s3-file for manipulating files on Amazon's S3 service.
Backups of more than 2GB to Amazon's S3 service now use the mulitpart protocol, which is needed to support large backups.
The contact email address for a domain can now contain multiple addresses with real names.
The DKIM feature in Virtualmin now supports OpenDKIM, as seen in Ubuntu 12.04.
Backups to Amazon S3 can now be to a sub-directory under a bucket, rather than being at the top level.