@@ -1348,3 +1348,4 @@ Backups of more than 2GB to Amazon's S3 service now use the mulitpart protocol, 
 The contact email address for a domain can now contain multiple addresses with real names.
 The DKIM feature in Virtualmin now supports OpenDKIM, as seen in Ubuntu 12.04.
 Backups to Amazon S3 can now be to a sub-directory under a bucket, rather than being at the top level.
+The disable-feature and enable-feature API commands now have flags to disassocaite and re-associate features with a domain, without actually updating the underlying configuration files or databases.
